# data-check

./: .gitignore  .pre-commit-hooks.yaml  README.md  README.zh-CN.md  pyproject.toml
docs/: landing-en.md  landing-zh.md
examples/github-actions/: data-quality.yml
server/: __init__.py  config.py  main.py
server/routers/: check.py  contribute.py  fix.py  report.py
server/rules/: vip-price-annotation.yaml
src/datacheck/: __init__.py  anomaly.py  checker.py  cli.py  contribute.py  fixer.py  llm_rules.py  mcp_server.py  report.py  rules.py  text_rules.py
tests/: __init__.py  test_anomaly.py  test_batch.py  test_checker.py  test_cli.py  test_fixer.py  test_llm_rules.py  test_report.py  test_text_rules.py
