[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowlyr-datacheck"
version = "0.1.0"
description = "数据质检工具 - 自动化质量检查、异常检测、分布分析"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "liukai" }
]
keywords = ["quality", "validation", "data", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
stats = ["numpy>=1.20", "scipy>=1.7"]
llm = ["anthropic>=0.18", "openai>=1.0"]
mcp = ["mcp>=1.0"]
dev = ["pytest", "ruff"]
all = ["knowlyr-datacheck[stats,llm,mcp,dev]"]

[project.scripts]
knowlyr-datacheck = "datacheck.cli:main"

[project.entry-points."mcp.servers"]
knowlyr-datacheck = "datacheck.mcp_server:serve"

[tool.hatch.build.targets.wheel]
packages = ["src/datacheck"]

[tool.ruff]
line-length = 100
target-version = "py310"
