[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowlyr-datacheck"
version = "0.3.0"
description = "Data quality inspection toolkit - automated validation, anomaly detection, and distribution analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Liu Kai", email = "mrliukai@gmail.com" }
]
keywords = ["data-quality", "validation", "anomaly-detection", "data-inspection", "machine-learning", "training-data", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
stats = ["numpy>=1.20", "scipy>=1.7"]
llm = ["anthropic>=0.18", "openai>=1.0"]
mcp = ["mcp>=1.0"]
yaml = ["PyYAML>=6.0"]
dev = ["pytest", "ruff"]
all = ["knowlyr-datacheck[stats,llm,mcp,yaml,dev]"]

[project.scripts]
knowlyr-datacheck = "datacheck.cli:main"

[project.entry-points."mcp.servers"]
knowlyr-datacheck = "datacheck.mcp_server:serve"

[project.urls]
Homepage = "https://github.com/liuxiaotong/data-check"
Documentation = "https://github.com/liuxiaotong/data-check#readme"
Repository = "https://github.com/liuxiaotong/data-check"
Issues = "https://github.com/liuxiaotong/data-check/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/datacheck"]

[tool.ruff]
line-length = 100
target-version = "py310"
